fixed the hover on mobile to not hover

--- a/src/styles/components/_moviePoster.scss
+++ b/src/styles/components/_moviePoster.scss
@@ -77,7 +77,7 @@ img.mass-poster {
     border: 3px solid $accentColor;
     width: 100%;
     position: relative;
-    // z-index: -10;
+    z-index: 10;
 }
 
 .all-movie-info-box {
@@ -122,7 +122,6 @@ img.mass-poster {
     img.mass-poster {
         width: 100%;
         position: relative;
-        z-index: -15;
     }
     
 }
@@ -136,6 +135,12 @@ img.mass-poster {
 @media (min-width: 1000px) {
     .movie-container {
         grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1024px){
+    img.mass-poster {
+        z-index: unset;
     }
 }
 
